# UFC-pokedex

./: .dockerignore  .env.example  .env.railway  .env.vercel  .gitignore  .pre-commit-config.yaml  .railway-ignore  .vercelignore  AGENTS.md  BFO_ODDS_INTEGRATION_CODEBASE_REVIEW.md  BUG_FIX_PLAN.md  BUG_REPORT.md  CLAUDE.md  COMPLETE_DEPLOYMENT_NOW.md  COUPLING_ANALYSIS.md  CPANEL_DEPLOY.md  DATA_STRUCTURE_ANALYSIS.md  EVENTS_PAGE_IMPROVEMENT_PROPOSAL.md  EXPOSED_CREDENTIALS.md  FINAL_DEPLOYMENT_STEPS.md  FINAL_IMAGE_SCRAPING_REPORT.md  IMAGE_SCRAPING_SUCCESS_STORY.md  INVESTIGATION_SUMMARY.md  Makefile  NEXT_SESSION_QUICKSTART.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PERFORMANCE_REVIEW_PHASE1.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PLAYWRIGHT_GUIDE.md  POST_MERGE_STATUS.md  QUICKSTART.md  QUICKSTART_SSH.md  QUICK_START_AI_VALIDATOR.md  README.md  SCRAPING_PROGRESS_REPORT.md  SECURITY_ALERT.md  SECURITY_DOCS_INDEX.md  SECURITY_REMEDIATION_CHECKLIST.md  SECURITY_SCAN_SUMMARY.md  (+28 more)
.benchmarks/: 2025-11-05_02-52-06_postgresql.json  2025-11-05_03-31-41_postgresql_after_phase2.json
.cloudflared/: config.template.yml
.deployment/: .gitkeep  README.md  config.env  config.env.example  id_rsa  id_rsa.pub  id_rsa_new  id_rsa_new.pub
Plans/: Database_Performance_Optimizations_2025-11-04.md  Fight_Visualization_Scatter_Chart_2025-11-04.md  Initial_Plan.md  Intelligent_Fighter_Image_Face_Cropping_2025-11-04.md  Performance_Optimization_Cold_Start_Elimination_2025-11-04.md  Repository_Refactoring_Plan.md  fighter-rankings-implementation.md
backend/: Dockerfile  (+7 more)
(+19049 files in other folders)
